docs: update content/posts/2017/08/10/jetbrains-ide-optimize.md